# globus-batch-transfer

./: README.md  pyproject.toml  requirements.txt
examples/: config.yaml  globus_definition.json  globus_input-schema.json  input.json
globus_batch_transfer/: __init__.py  __main__.py
