[tool.poetry]
name = "globus-batch-transfer"
version = "0.1.0"
description = "Tool to automate file transfer between globus endpoints. Moves data in source directory to destination, and deletes source after successful transfer."
authors = ["Adnan Hafeez"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
globus-automate-client = "0.17.1"
globus-sdk = "3.16.0"
PyYAML = "6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
